--- a/GroupLockApplication/app/src/main/res/values/strings.xml
+++ b/GroupLockApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GroupLockApplication</string>
+    <string name="action_settings">Настройки</string>
+    <string name="action_change">Изменить</string>
+    <string name="action_search">Поиск</string>
+    <string name="action_make_dir">Создать папку</string>
 </resources>
