--- a/GroupLockApplication/app/src/main/res/values/strings.xml
+++ b/GroupLockApplication/app/src/main/res/values/strings.xml
@@ -1,17 +1,16 @@
 ﻿<resources>
     <string name="app_name">GroupLock Application</string>
 
-    <string name="action_settings">Настройки</string>
-    <string name="action_change">Изменить</string>
-    <string name="action_search">Поиск</string>
-   <string name="action_create">Create Folder</string>
-    <string name="action_make_dir">Создать папку</string>
+    <!-- Library -->
+    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="action_create_folder">Create Folder</string>
+    <string name="create_folder_dialogue_title">Create folder</string>
+    <string name="create_folder_dialogue_description">Enter directory name:</string>
+    <string name="information_window_title">Information</string>
+    <string name="information_window_description">Tap to open a directory.\nHold an item to call the context menu</string>
 
-    <string name="action_choose_file">Выбрать файл</string>
-    <string name="action_change_file">Изменить</string>
-    <string name="action_search_file">Поиск</string>
-    <string name="action_make_dir_file">Создать папку</string>
-
+    <!-- Menu Items -->
     <string name="activity_home">Home</string>
     <string name="activity_library">Library</string>
     <string name="activity_info">Info</string>
