--- a/GroupLockApplication/app/src/main/res/values/strings.xml
+++ b/GroupLockApplication/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_create_folder">Create Folder</string>
+    <string name="action_encrypt">Encrypt</string>
+    <string name="action_decrypt">Decrypt</string>
+    <string name="action_help">Help</string>
     <string name="create_folder_dialogue_title">Create folder</string>
     <string name="create_folder_dialogue_description">Enter directory name:</string>
     <string name="information_window_title">Information</string>
@@ -20,5 +23,8 @@
     <string name="activity_library">Library</string>
     <string name="activity_info">Info</string>
     <string name="activity_settings">Settings</string>
+
+    <!-- common -->
+    <string name="common_next_step">Next step</string>
 
 </resources>
