--- a/GroupLockApplication/app/src/main/res/values/strings.xml
+++ b/GroupLockApplication/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">GroupLock Application</string>
 
     <!-- Library -->
+    <string name="library_activity_name">Library</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_create_folder">Create Folder</string>
